# SAgenT

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Ideas.md  Makefile  PLAN.md  README.md  compose.yaml  denabase_graph.html  output.txt  output_debug.json  pyproject.toml  react_engine.py  requirements.txt  set_up.sh  test_fuzz_output.py
Denabase/: README.md  __init__.py  denabase_cli.py  pyproject.toml
Denabase/Denabase/: __init__.py  denabase_cli.py
Denabase/Denabase.egg-info/: requires.txt
Denabase/Denabase/alpha/: __init__.py  alpha_model.py
Denabase/agent/: denabase_bridge.py
Denabase/cnf/: __init__.py  cnf_io.py  cnf_simplify.py  cnf_stats.py  cnf_types.py
Denabase/core/: __init__.py  errors.py  logging.py  serialization.py  types.py
Denabase/db/: __init__.py  denabase.py  schema.py  store.py
Denabase/embed/: __init__.py  feature_embedder.py  index.py
Denabase/gadgets/: __init__.py  gadget_registry.py  gadget_spec.py
Denabase/graph/: __init__.py  fingerprints.py  lcg.py
Denabase/ir/: __init__.py  ir_compile.py  ir_normalize.py  ir_types.py
Denabase/profile/: __init__.py  cnf_profile.py  ir_profile.py  profile_types.py
Denabase/select/: __init__.py  encoding_selector.py  solver_selector.py
Denabase/smoke_db/: cb4cf595-440e-474b-b5b1-1d9edd665246.cnf
Denabase/tests/: test_cnf_roundtrip.py  test_gadgets_ir.py  test_imports.py  test_index_retrieval.py  test_ir_compile.py  test_lcg_fingerprint.py  test_profiles.py  test_selectors.py  test_verifier_smoke.py
Denabase/verify/: __init__.py  metamorphic.py  toygen.py  verifier.py
(+268 files in other folders)
